[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/MashBash/enemy0.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="movetimer" type="Timer" parent="."]
wait_time = 0.125

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="movetimer" to="." method="_on_movetimer_timeout"]
